[fix] Remove 1GB attachment limit on Help -> Support page #4208

--- a/app/ui/src/app/support/support.component.html
+++ b/app/ui/src/app/support/support.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <h1>Support</h1>
       <p>To obtain support, download diagnostic information through this page and open a request on the <a [attr.href]="'links.contactus' | synI18n">Red Hat Customer portal</a>.
-        If the downloaded zip file is less than 1 GB, attach it to the case. For a larger zip file, tell the support team that the zip file is larger than 1 GB and ask for <a href="https://access.redhat.com/solutions/2112">instructions</a>.</p>
+        If you have any issues please see the support <a href="https://access.redhat.com/solutions/2112">instructions</a>.</p>
     <h2>Version</h2>
     <syndesis-loading [loading]="!(version$ | async)" [content]="content">
       <ng-template #content>
