Change instances of "OpenAPI Specification" where appropriate to "OpenAPI document" (#4361)

--- a/app/ui/src/app/customizations/api-connector/api-connector-list/api-connector-list.component.html
+++ b/app/ui/src/app/customizations/api-connector/api-connector-list/api-connector-list.component.html
@@ -1,7 +1,7 @@
 <div class="api-connector-list">
   <h1>API Client Connectors</h1>
   <p>
-    <a>{{ appName }}</a> creates an API client connector when you upload a valid OpenAPI 2.0 specification that describes the
+    <a>{{ appName }}</a> creates an API client connector when you upload a valid OpenAPI 2.0 document that describes the
     API you want to connect to.
   </p>
   <syndesis-validation-error *ngIf="stateError | async">
