feat(newSyndesisLogo): cleaning up autogeneratred files/code.

--- a/app/ui/src/app/app.component.html
+++ b/app/ui/src/app/app.component.html
@@ -6,7 +6,7 @@
 
   <ng-template #brandTemplate>
     <a routerLink="/" class="navbar-brand" role="link">
-      <img *ngIf="logoIconDarkBg" [class]="productBuild ? 'navbar-brand-name product' : 'navbar-brand-name'" [src]="logoIconDarkBg" alt="{{ appName }}" />
+      <img *ngIf="logoDarkBg" [class]="productBuild ? 'navbar-brand-name product' : 'navbar-brand-name'" [src]="logoDarkBg" alt="{{ appName }}" />
     </a>
   </ng-template>
 
