--- a/install/generator/03-syndesis-ui.yml.mustache
+++ b/install/generator/03-syndesis-ui.yml.mustache
@@ -127,10 +127,7 @@
         },
 {{#Productized}}
         "branding": {
-          "logoWhiteBg": "",
-          "logoDarkBg": "",
-          "iconWhiteBg": "assets/images/FuseOnlineLogo_Black.svg",
-          "iconDarkBg": "assets/images/FuseOnlineLogo_White.svg",
+          "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
           "appName": "Fuse Online",
           "favicon32": "/favicon-32x32.png",
           "favicon16": "/favicon-16x16.png",
@@ -138,10 +135,7 @@
           "productBuild": true
        }{{/Productized}}{{^Productized}}
         "branding": {
-          "logoWhiteBg": "assets/images/syndesis-logo-svg-white.svg",
-          "logoDarkBg": "assets/images/syndesis-logo-svg-white.svg",
-          "iconWhiteBg": "assets/images/glasses_logo_square.png",
-          "iconDarkBg": "assets/images/glasses_logo_square.png",
+          "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
           "appName": "Syndesis",
           "favicon32": "/favicon-32x32.png",
           "favicon16": "/favicon-16x16.png",
