feat(newSyndesisLogo): fixing yml file. replacing img with svg logo. replacing favicon and other logo assets.

--- a/app/ui/src/scss/utils/_overrides.scss
+++ b/app/ui/src/scss/utils/_overrides.scss
@@ -27,6 +27,10 @@ body.cards-pf {
   .navbar-brand {
     margin: 6px 0 0 25px;
     white-space: nowrap;
+    #appLogo {
+      width: 39%;
+      height: auto;
+    }
     .navbar-brand-icon {
       max-height: 28px;
       vertical-align: middle;
