--- a/install/generator/03-syndesis-ui.yml.mustache
+++ b/install/generator/03-syndesis-ui.yml.mustache
@@ -127,7 +127,9 @@
         },
 {{#Productized}}
         "branding": {
-          "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
+          "logoWhiteBg": "",
+          "logoDarkBg": "",
+          "iconWhiteBg": "assets/images/FuseOnlineLogo_Black.svg",
           "appName": "Fuse Online",
           "favicon32": "/favicon-32x32.png",
           "favicon16": "/favicon-16x16.png",
@@ -135,6 +137,9 @@
           "productBuild": true
        }{{/Productized}}{{^Productized}}
         "branding": {
+          "logoWhiteBg": "",
+          "logoDarkBg": "",
+          "iconWhiteBg": "assets/images/FuseOnlineLogo_Black.svg",
           "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
           "appName": "Syndesis",
           "favicon32": "/favicon-32x32.png",
